--- a/package.json
+++ b/package.json
@@ -6,17 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prod": "next build && next start"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
+    "@supabase/supabase-js": "^2.45.2",
+    "date-fns": "^3.6.0",
+    "next": "14.2.6",
+    "next-auth": "^5.0.0-beta.20",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.6"
+    "react-day-picker": "^9.0.8",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.6"
+    "eslint-config-next": "14.2.6",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
